--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,9 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  color:cadetblue;
+  font-style: italic;
+  font-size: large;
 }
 
 h1 {
@@ -55,7 +58,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color:cadetblue;
 }
 button:focus,
 button:focus-visible {
